// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tårn snapshot fullt tårn med flagg 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 15 av 15 etasjer synlige"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 510"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="480"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="478"
      />
      <g
        opacity="1"
      >
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="442"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="450"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fde68a"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="414"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="422"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fcd34d"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="386"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="394"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fbbf24"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="358"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="366"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#f59e0b"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="330"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="338"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fb923c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="302"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="310"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#f97316"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="274"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="282"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#ea580c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="246"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="254"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#dc2626"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="218"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="226"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#e11d48"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="190"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="198"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#db2777"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="162"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="170"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#c026d3"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="134"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="142"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#a855f7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="106"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="114"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#7c3aed"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="78"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="86"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#6366f1"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="50"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="58"
        />
      </g>
      <g>
        <line
          stroke="#451a03"
          stroke-width="2"
          x1="60"
          x2="60"
          y1="50"
          y2="15"
        />
        <polygon
          fill="#dc2626"
          points="60,15 82,22 60,29"
          stroke="#7f1d1d"
          stroke-width="1"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        15
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Tårn snapshot første etasje 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 1 av 15 etasjer synlige"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 510"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="480"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="478"
      />
      <g
        opacity="1"
      >
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="442"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="450"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="414"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="422"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="386"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="394"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="358"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="366"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="330"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="338"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="302"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="310"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="274"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="282"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="246"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="254"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="218"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="226"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="190"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="198"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="162"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="170"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="134"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="142"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="106"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="114"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="78"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="86"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="50"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="58"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        1
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Tårn snapshot midt-tårn (etasje 7) 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 8 av 15 etasjer synlige"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 510"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="480"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="478"
      />
      <g
        opacity="1"
      >
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="442"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="450"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fde68a"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="414"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="422"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fcd34d"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="386"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="394"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fbbf24"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="358"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="366"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#f59e0b"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="330"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="338"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#fb923c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="302"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="310"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#f97316"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="274"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="282"
        />
      </g>
      <g
        opacity="1"
      >
        <rect
          fill="#ea580c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="246"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="254"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="218"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="226"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="190"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="198"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="162"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="170"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="134"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="142"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="106"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="114"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="78"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="86"
        />
      </g>
      <g
        opacity="0.45"
      >
        <rect
          fill="#e5e7eb"
          height="28"
          rx="3"
          stroke="#9ca3af"
          stroke-width="2"
          width="80"
          x="20"
          y="50"
        />
        <rect
          fill="#d1d5db"
          height="12"
          rx="1"
          stroke="#9ca3af"
          stroke-width="1.5"
          width="12"
          x="54"
          y="58"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        8
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;
